assetic page in the demo

--- a/src/Acme/DemoBundle/Resources/views/Demo/index.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Demo/index.html.twig
@@ -10,5 +10,6 @@
         <li><a href="{{ path('_demo_hello', {'name': 'World'}) }}">Hello World</a></li>
         <li><a href="{{ path('_demo_secured_hello', {'name': 'World'}) }}">Access the secured area</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="{{ path('_demo_login') }}">Go to the login page</a></li>
         {# <li><a href="{{ path('_demo_contact') }}">Send a Message</a></li> #}
+        <li><a href="{{ path('_demo_assetic') }}">Assetic demonstration</a></li>
     </ul>
 {% endblock %}
