--- a/src/Acme/DemoBundle/Resources/views/Demo/contact.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Demo/contact.html.twig
@@ -1,6 +1,6 @@
 {% extends "AcmeDemoBundle::layout.html.twig" %}
 
-{% block title "Symfony - Contact form" %}
+{% block title "Symfony2 - Contact form" %}
 
 {% block content %}
     <form action="{{ path('_demo_contact') }}" method="POST" id="contact_form">
