--- a/src/Acme/DemoBundle/Resources/views/Demo/index.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Demo/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "AcmeDemoBundle::layout.html.twig" %}
 
-{% block title "Symfony - Demos" %}
+{% block title "Symfony2 - Demos" %}
 
 {% block content_header '' %}
 
