--- a/src/Acme/DemoBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Welcome/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'AcmeDemoBundle::layout.html.twig' %}
 
-{% block title %}Symfony - Welcome{% endblock %}
+{% block title %}Symfony2 - Welcome{% endblock %}
 
 {% block content_header '' %}
 
 {% block content %}
     <h1>Welcome!</h1>
 
-    <p>Congratulations! You have successfully installed a new Symfony application.</p>
+    <p>Congratulations! You have successfully installed a new Symfony2 application.</p>
 
     <div class="symfony-blocks-welcome">
         <div class="block-quick-tour">
