Исправил namespaces для ExceptionsBundle

--- a/src/alkr/CustomExceptionsBundle/Resources/views/Exception/error404.html.twig
+++ b/src/alkr/CustomExceptionsBundle/Resources/views/Exception/error404.html.twig
@@ -1,4 +1,4 @@
-{% extends "SportWantedBundle::base.html.twig" %}
+{% extends "ExtendCMSBundle::base.html.twig" %}
 
 {% block title %}Ошибка: {{ status_text }}{% endblock %}
 {% block content %}
