Added homepage blocks

--- a/src/Acme/DemoBundle/Resources/views/Page/index.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Page/index.html.twig
@@ -1,6 +1,9 @@
 {% extends 'AcmeDemoBundle::layout.html.twig' %}
 
-{% block main %}
+{% block hero_unit %}
 <h1>{{ cmfMainContent.title }}</h1>
+{% endblock %}
+
+{% block main %}
 <p>{{ cmfMainContent.body }}</p>
 {% endblock %}
