--- a/src/Acme/DemoBundle/Resources/views/layout.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/layout.html.twig
@@ -24,15 +24,11 @@
     </nav>
 
     <div class="jumbotron  page__hero-unit">
-        {% block hero_unit %}
-            <h1>Welcome!</h1>
-            <h2>Symfony2 Content Management Framework</h2>
-        {% endblock %}
+        {% block hero_unit %}{% endblock %}
     </div>
 
     <div class="page__main">
-        {% block main %}
-        {% endblock %}
+        {% block main %}{% endblock %}
     </div>
 </body>
 </html>
