--- a/src/Acme/DemoBundle/Resources/views/Block/unit.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Block/unit.html.twig
@@ -3,6 +3,6 @@
 {% block block %}
 <div class="col-md-4  col-sm-4">
     <img class="center-block" src="{{ asset(block.image) }}"><br>
-    <a class="btn  btn-default  btn-block" href="{{ block.url is defined ?  block.url : path(block.route) }}">{{ block.text }}</a>
+    <a class="btn  btn-default  btn-block" href="{{ block.url is not null ? block.url : path(block.route) }}">{{ block.text }}</a>
 </div>
 {% endblock %}
