--- a/src/Acme/DemoBundle/Resources/views/home.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/home.html.twig
@@ -7,6 +7,6 @@
 
 {% block main %}
     <div class="row">
-    {{ sonata_block_render({'name': '/cms/blocks/hero_unit'}) }}
+    {{ sonata_block_render({'name': '/cms/content/blocks/hero_unit'}) }}
     </div>
 {% endblock %}
