Integrated the CreateBundle

--- a/src/Acme/DemoBundle/Resources/views/Page/index.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Page/index.html.twig
@@ -1,9 +1,7 @@
 {% extends 'AcmeDemoBundle::layout.html.twig' %}
 
-{% block hero_unit %}
-<h1>{{ cmfMainContent.title }}</h1>
-{% endblock %}
-
 {% block main %}
-<p>{{ cmfMainContent.body }}</p>
+    {% createphp cmfMainContent as="rdf" %}
+        {{ rdf|raw }}
+    {% endcreatephp %}
 {% endblock %}
