--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,11 +2,11 @@
 
 {% block body %}
     <div id="wrapper">
-        <div id="container">
-            <div id="welcome">
-                <h1><span>Welcome to</span> Symfony {{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION') }}</h1>
-            </div>
+        <div id="welcome">
+            <h1><span>Welcome to</span> Symfony {{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION') }}</h1>
+        </div>
 
+        <div id="container">
             <div id="status">
                 <p>
                     <svg id="icon-status" width="1792" height="1792" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1671 566q0 40-28 68l-724 724-136 136q-28 28-68 28t-68-28l-136-136-362-362q-28-28-28-68t28-68l136-136q28-28 68-28t68 28l294 295 656-657q28-28 68-28t68 28l136 136q28 28 28 68z" fill="#759E1A"/></svg>
@@ -50,22 +50,25 @@
 <style>
     body { background: #F5F5F5; font: 18px/1.5 sans-serif; }
     h1, h2 { line-height: 1.2; margin: 0 0 .5em; }
-    h1 { font-size: 36px; }
+    h1 { font-size: 26px; }
     h2 { font-size: 21px; margin-bottom: 1em; }
     p { margin: 0 0 1em 0; }
+    p:last-child { margin-bottom: 0; }
     a { color: #0000F0; }
     a:hover { text-decoration: none; }
-    code { background: #F5F5F5; max-width: 100px; padding: 2px 6px; word-wrap: break-word; }
-    #wrapper { background: #FFF; margin: 1em auto; max-width: 800px; width: 95%; }
-    #container { padding: 2em; }
-    #welcome, #status { margin-bottom: 2em; }
-    #welcome h1 span { display: block; font-size: 75%; }
-    #icon-status, #icon-book { float: left; height: 64px; margin-right: 1em; margin-top: -4px; width: 64px; }
-    #icon-book { display: none; }
+    code { color:#AAA; max-width: 100px; padding: 2px 6px; word-wrap: break-word; }
+    #wrapper { margin: 1em auto; max-width: 800px; width: 95%; }
+    #container { background: #FFF; padding: 1em; }
+    #welcome, #status { margin-bottom: 1em; }
+    #welcome h1 span { color: #CCC; display: block; font-size: 75%; }
+    #icon-status, #icon-book { display: none; float: left; height: 64px; margin-right: 1em; margin-top: -4px; width: 64px; }
 
     @media (min-width: 768px) {
-        #wrapper { width: 80%; margin: 2em auto; }
-        #icon-book { display: inline-block; }
+        h1 { font-size: 36px; }
+        #wrapper { width: 80%; margin: 2em auto; padding: 0 2em; }
+        #container { padding: 2em; }
+        #welcome, #status { margin-bottom: 2em; }
+        #icon-status, #icon-book { display: inline-block; }
         #status a, #next a { display: block; }
 
         @-webkit-keyframes fade-in { 0% { opacity: 0; } 100% { opacity: 1; } }
